--- a/minisajten-web-/secound.css
+++ b/minisajten-web-/secound.css
@@ -1,19 +1,73 @@
-header{
-    opacity: 0.5;
-  }
-  
-.navbar a{
-    background-color: #d3b28f;
-    padding: 10px;
-    font-size: 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    color: black;
-  }
-.navbar a:hover{
-    background-color: rgb(189, 146, 81);
-  }
+.navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: rgb(235, 167, 83);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
 
-div.first_image {
-  back
+.navbar a{
+  opacity: 1;
+  padding: 5px;
+  font-size: 40px;
+  text-decoration: none;
+  border-radius: 5px;
+  color: rgb(0, 0, 0);
+}
+
+.navbar a:hover{
+  background-color: rgb(245, 158, 51);
+  text-decoration: underline 3px;
+}
+
+p{
+  font-size: 30px;
+  background-color: rgb(235, 167, 83);
+  margin-top: 1px;
+  margin-bottom: 0px;
+  padding: 10px;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-container > div {
+  width: 50%;
+  text-align: center;
+  font-size: 50px;
+  height: 100%;
+  background-size: cover; 
+  color: white;
+  background-color: white;
+}
+
+ul{
+  font-size: 30px;
+  text-align: left;
+}
+
+div:nth-child(1){
+  background-image: url(https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Annie_0.jpg);
+}
+
+div:nth-child(2){
+  background-image: url(https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Garen_0.jpg);
+  color: black;
+}
+
+div:nth-child(3){
+  background-image: url(https://static.wikia.nocookie.net/leagueoflegends/images/b/b8/Ashe_OriginalCentered.jpg/revision/latest/scale-to-width-down/1280?cb=20180414201913);
+}
+
+div:nth-child(4){
+  background-image: url(https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Yuumi_0.jpg);
+}
+
+@media screen and (max-width: 850px){
+  .flex-container > div{
+    width: 100%;
+  }
 }
